--- a/en/index.html
+++ b/en/index.html
@@ -11,9 +11,16 @@
             href="/images/shorticon.ico"
             rel="shortcut icon"
         />
-        <title>MST Profi</title>
+        <title>
+            MST Profi - Welding services - Service Outsourcing - Employee
+            Oursoring
+        </title>
 
-        <meta name="description" content="" />
+        <meta
+            name="description"
+            content="MST Profi Professional welding services to meet your needs. Manpower outsourcing for your company.
+        Welder training courses. "
+        />
         <meta
             name="keywords"
             content="welder,poland,work,job,grinder,painter,torun,bydgoszcz,shipyard,welding,tig,mig,mag,gdansk,wroclaw,opole,plate,pipe"
@@ -297,6 +304,20 @@
                             package
                         </p>
                     </li>
+                    <li class="achievments-list__item">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"
+                        >
+                            <path
+                                d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                            />
+                        </svg>
+                        <p class="achievments-list__item-text p-size-text">
+                            After completing the course at our welding school,
+                            you will be ready to work as a qualified welder
+                        </p>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -352,8 +373,17 @@
                             Legalization
                         </h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            We provide all necessary documents related to
-                            staying and legal work in Poland
+                            We provide all the necessary documents related to
+                            the stay and legal work of your employees. As our
+                            client, you will receive full support in the process
+                            of legalizing the stay and work of foreigners in
+                            Poland and the European Union. We will take care of
+                            - Issuance of work permits for foreigners -
+                            documentation related to employment - A1 certificate
+                            for an employee delegated to the territory of
+                            another EU member state Thanks to our experience and
+                            knowledge of the law, we will help you to cope with
+                            all the complexities of administrative procedures.
                         </p>
                         <button class="our-services-cards__item-button">
                             More details
@@ -446,11 +476,13 @@
             data-modal-form
         >
             <div class="form-modal-inner modal__inner">
-                <img
-                    src="/images/form-banner.png"
-                    alt="banner"
-                    class="form-modal-inner__img"
-                />
+                <div class="obolochka_for_image">
+                    <img
+                        src="/images/form-banner.png"
+                        alt="Transparent"
+                        class="form-modal-inner__img"
+                    />
+                </div>
                 <div class="form-modal-inner-info">
                     <h4 class="form-modal-inner-info__h4">
                         Let's keep in touch!
