--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
             href="/images/shorticon.ico"
             rel="shortcut icon"
         />
-        <title>MST Profi</title>
+        <title>
+            MST Profi - Usługi spawalnicze - Outsourcing usługowy - Oursorcing
+            pracowniczy
+        </title>
 
-        <meta name="description" content="" />
+        <meta
+            name="description"
+            content="MST Profi Profesjonalne usługi spawalnicze na miarę Twoich potrzeb outsourcing pracowniczy dla Twojej firmy.
+        Kursy szkolenia spawaczy."
+        />
         <meta
             name="keywords"
             content="Spawacz,polska,praca,robota,monterz,slusarz,malarz,szliferz,gdansk,bydgoszcz,torun,wroclaw,opole,rekrutacja,stocznia,delegacja,spawanie,tig,mig,mag,rury,blachy"
@@ -300,6 +307,21 @@
                             ubezpieczeń zdrowotnych
                         </p>
                     </li>
+                    <li class="achievments-list__item">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"
+                        >
+                            <path
+                                d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                            />
+                        </svg>
+                        <p class="achievments-list__item-text p-size-text">
+                            Po ukończeniu kursu w naszej szkole spawalniczej
+                            będziesz gotowy do pracy jako wykwalifikowany
+                            spawacz
+                        </p>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -353,8 +375,17 @@
                     <li class="our-services-cards__item">
                         <h4 class="our-services-cards__item-h4">Legalizacja</h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Zapewniamy wszelkie niezbędne dokumenty związane z
-                            pobytem i legalną pracą w Polsce
+                            Zapewniamy wszystkie niezbędne dokumenty związane z
+                            pobytem i legalną pracą Twoich pracowników. Jako
+                            nasz klient otrzymasz pełne wsparcie w procesie
+                            legalizacji pobytu i pracy cudzoziemców w Polsce i
+                            Unii Europejskiej. Zajmiemy się - wydawaniem
+                            zezwoleń na pracę dla cudzoziemców - dokumentację
+                            związaną z zatrudnieniem - zaświadczenie A1 dla
+                            pracownika delegowanego na terytorium innego państwa
+                            członkowskiego UE Dzięki naszemu doświadczeniu i
+                            znajomości przepisów, pomożemy Ci uporać się ze
+                            wszystkimi zawiłościami procedur administracyjnych.
                         </p>
                         <button class="our-services-cards__item-button">
                             Więcej szczegółów
@@ -461,11 +492,14 @@
             data-modal-form
         >
             <div class="form-modal-inner modal__inner">
-                <img
-                    src="/images/form-banner.png"
-                    alt="Transparent"
-                    class="form-modal-inner__img"
-                />
+                <div class="obolochka_for_image">
+                    <img
+                        src="/images/form-banner.png"
+                        alt="Transparent"
+                        class="form-modal-inner__img"
+                    />
+                </div>
+
                 <div class="form-modal-inner-info">
                     <h4 class="form-modal-inner-info__h4">
                         Bądźmy w kontakcie!
