--- a/ua/index.html
+++ b/ua/index.html
@@ -11,9 +11,16 @@
             href="/images/shorticon.ico"
             rel="shortcut icon"
         />
-        <title>MST Profi</title>
+        <title>
+            MST Profi - Зварювальні послуги - Аутсорсинг послуг - Аутсорсинг
+            працівників
+        </title>
 
-        <meta name="description" content="" />
+        <meta
+            name="description"
+            content="MST Profi Професійні зварювальні послуги відповідно до ваших потреб. 
+        Аутсорсинг працівників для вашої компанії. Курси підготовки зварювальників."
+        />
         <meta
             name="keywords"
             content="cварщик,работа,робота,польша,монтер,слесарь,слюсар,європа,вакансії,маляр,торунь,бидгощ,гданськ,ополе,сточня,праця,тіг,міг,маг,вроцлав,торунь"
@@ -355,7 +362,16 @@
                         <h4 class="our-services-cards__item-h4">Легалізація</h4>
                         <p class="our-services-cards__item-p p-size-text">
                             Ми надаємо всі необхідні документи, пов'язані з
-                            перебуванням і легальною роботою в Польщі
+                            перебуванням і легальною роботою Ваших працівників.
+                            Як наш клієнт, Ви отримаєте повну підтримку в
+                            процесі легалізації перебування та роботи іноземців
+                            у Польщі та країнах Європейського Союзу. Ми подбаємо
+                            про - видача дозволів на роботу для іноземців -
+                            документація, пов'язана з працевлаштуванням -
+                            довідка А1 для працівника, делегованого на територію
+                            іншої держави-члена ЄС Завдяки нашому досвіду та
+                            знанню законодавства, ми допоможемо Вам впоратися з
+                            усіма складнощами адміністративних процедур.
                         </p>
                         <button class="our-services-cards__item-button">
                             Детальніше
@@ -448,11 +464,13 @@
             data-modal-form
         >
             <div class="form-modal-inner modal__inner">
-                <img
-                    src="/images/form-banner.png"
-                    alt="Баннер"
-                    class="form-modal-inner__img"
-                />
+                <div class="obolochka_for_image">
+                    <img
+                        src="/images/form-banner.png"
+                        alt="Transparent"
+                        class="form-modal-inner__img"
+                    />
+                </div>
                 <div class="form-modal-inner-info">
                     <h4 class="form-modal-inner-info__h4">
                         Давайте будемо на зв'язку!
