--- a/en/index.html
+++ b/en/index.html
@@ -392,12 +392,18 @@
                     <li class="our-services-cards__item">
                         <h4 class="our-services-cards__item-h4">Recruitment</h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Work in Poland for foreigners. If you are interested
-                            in legal work in Poland, we suggest you contact us.
-                            The recruiting process includes recruitment,
-                            selection, and interview, obtaining additional
-                            information about candidates, signing a contract,
-                            and adopting new employees
+                            Are you looking for legal work abroad? We will help
+                            you with this! Our company provides a comprehensive
+                            recruitment process, taking into account all
+                            aspects, including the legality of employment. We
+                            guarantee not only professional selection of
+                            candidates, but also assistance in adapting to the
+                            new environment. Our goal is to provide you with a
+                            stable and safe job abroad, so that you can realize
+                            your potential and succeed in your career. Don't
+                            lose your opportunity, contact us today and open new
+                            horizons for your professional and personal
+                            development!
                         </p>
                         <button class="our-services-cards__item-button">
                             More details
@@ -408,10 +414,17 @@
                             Qualified training of specialists for work
                         </h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            If you do not have experience in welding work - this
-                            is not a problem. Sign up for welding training with
-                            us, you will quickly and efficiently master a new
-                            specialty
+                            Our company has significant experience in personnel
+                            selection in the metalworking industry. We
+                            understand that welding work requires close
+                            attention to detail and a high level of proficiency.
+                            Therefore, our recruiters prefer candidates with
+                            appropriate experience, qualifications and
+                            professional skills in this area. We guarantee that
+                            each employee we recommend has not only the
+                            necessary technical knowledge, but also the ability
+                            to work under high pressure and meet occupational
+                            safety requirements.
                         </p>
                         <button class="our-services-cards__item-button">
                             More details
