--- a/ua/index.html
+++ b/ua/index.html
@@ -380,12 +380,18 @@
                     <li class="our-services-cards__item">
                         <h4 class="our-services-cards__item-h4">Рекрутація</h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Робота в Польщі для іноземців. Якщо ви зацікавлені
-                            легальною працею в Польщі, пропонуємо вам зв'язатися
-                            з нами. Процес рекрутингу передбачає поряд із
-                            залученням, відбором і співбесідою також отримання
-                            додаткової інформації про кандидатів, підписання
-                            контракту й адаптацію нових працівників
+                            Шукаєте легальну роботу за кордоном? Ми вам у цьому
+                            допоможемо! Наша компанія забезпечує комплексний
+                            процес підбору персоналу, враховуючи всі аспекти,
+                            включаючи легальність працевлаштування. Ми
+                            гарантуємо не лише професійний відбір кандидатів, а
+                            й допомогу в адаптації до нового середовища. Наша
+                            мета — забезпечити вам стабільну та безпечну роботу
+                            за кордоном, щоб ви могли реалізувати свій потенціал
+                            і досягти успіху в кар’єрі. Не втратьте свою
+                            можливість, зв’яжіться з нами сьогодні та відкрийте
+                            нові горизонти для свого професійного та особистого
+                            розвитку!
                         </p>
                         <button class="our-services-cards__item-button">
                             Детальніше
@@ -396,10 +402,16 @@
                             Кваліфікована підготовка спеціалістів до роботи
                         </h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Якщо у Вас не має досвіду в зварювальних роботах -
-                            це не проблема. Запишіться до нас на навчання
-                            зварювальника, швидко і якісно опануєте нову
-                            спеціальність
+                            Наша компанія має значний досвід підбору персоналу в
+                            металообробній галузі. Ми розуміємо, що зварювальні
+                            роботи вимагають пильної уваги до деталей і високого
+                            рівня кваліфікації. Тому наші рекрутери віддають
+                            перевагу кандидатам з відповідним досвідом,
+                            кваліфікацією та професійними навичками в цій сфері.
+                            Ми гарантуємо, що кожен рекомендований нами
+                            співробітник має не тільки необхідні технічні
+                            знання, але й здатність працювати під високим тиском
+                            і відповідати вимогам безпеки праці.
                         </p>
                         <button class="our-services-cards__item-button">
                             Детальніше
