--- a/ua/index.html
+++ b/ua/index.html
@@ -313,6 +313,9 @@
         </section>
 
         <section class="certificats sections">
+            <h2 class="certificats-h2 h2-size-text">
+                Наші сертифікати
+            </h2>
             <div class="container">
                 <img
                     src="/images/cert1.png"
