--- a/en/index.html
+++ b/en/index.html
@@ -323,6 +323,9 @@
         </section>
 
         <section class="certificats sections">
+            <h2 class="certificats-h2 h2-size-text">
+                Our certificates
+            </h2>
             <div class="container">
                 <img
                     src="/images/cert1.png"
