--- a/en/index.html
+++ b/en/index.html
@@ -219,21 +219,7 @@
                             About us
                         </h2>
                         <p class="about-us-block__info-p p-size-text">
-                            The company has been operating since 2021 throughout
-                            the territory of Poland, we are engaged in the
-                            employment of people from such countries as Ukraine,
-                            Belarus, Indonesia, Moldova, India, the Philippines,
-                            and African countries in the specialty: welder,
-                            locksmith, fitter, painter, grinder. We approach the
-                            performance of entrusted works with due
-                            responsibility and reliability. We employ only
-                            experienced specialists with the necessary
-                            qualifications. Our knowledge and experience allow
-                            us to provide services in accordance with
-                            legislation and applicable safety norms and
-                            standards. We take care to provide our employees
-                            with comfort and safety during the entire period of
-                            cooperation.
+                            Our company has been successfully operating since 2021 throughout Poland. We help people from Ukraine, Belarus, Indonesia, Moldova, India, the Philippines and African countries find work in the metalworking industry. Our team, which consists of experienced specialists, responsibly and reliably performs all tasks assigned by clients. Qualified personnel, using extensive knowledge and extensive experience, meet all the requirements of legislation and safety standards. We make sure that our employees feel comfortable and safe during the entire period of cooperation with clients.
                         </p>
                     </div>
                     <img
@@ -259,8 +245,7 @@
                             />
                         </svg>
                         <p class="achievments-list__item-text p-size-text">
-                            During the time of the company's operation, we
-                            employed more than 1,000 people
+                            More than 1,000 people worked for us during the company's operation.
                         </p>
                     </li>
                     <li class="achievments-list__item">
@@ -273,8 +258,7 @@
                             />
                         </svg>
                         <p class="achievments-list__item-text p-size-text">
-                            Fast and high-quality processing of documents for
-                            legal stay and work in Poland
+                            We provide fast and high-quality processing of documents necessary for legal stay and work in Poland.
                         </p>
                     </li>
                     <li class="achievments-list__item">
@@ -287,7 +271,7 @@
                             />
                         </svg>
                         <p class="achievments-list__item-text p-size-text">
-                            We speak Ukrainian, Polish, English, Russian
+                            We speak Ukrainian, Polish, English and Russian.
                         </p>
                     </li>
                     <li class="achievments-list__item">
@@ -300,8 +284,7 @@
                             />
                         </svg>
                         <p class="achievments-list__item-text p-size-text">
-                            Timely salary payments and a full health insurance
-                            package
+                            We guarantee timely payment of wages and a full health insurance package.
                         </p>
                     </li>
                     <li class="achievments-list__item">
@@ -314,8 +297,7 @@
                             />
                         </svg>
                         <p class="achievments-list__item-text p-size-text">
-                            After completing the course at our welding school,
-                            you will be ready to work as a qualified welder
+                            At our school, we offer welding courses that will prepare you to work as a qualified welder.
                         </p>
                     </li>
                 </ul>
@@ -376,17 +358,13 @@
                             Legalization
                         </h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            We provide all the necessary documents related to
-                            the stay and legal work of your employees. As our
-                            client, you will receive full support in the process
-                            of legalizing the stay and work of foreigners in
-                            Poland and the European Union. We will take care of
-                            - Issuance of work permits for foreigners -
-                            documentation related to employment - A1 certificate
-                            for an employee delegated to the territory of
-                            another EU member state Thanks to our experience and
-                            knowledge of the law, we will help you to cope with
-                            all the complexities of administrative procedures.
+                            We provide all the necessary documents related to the legal stay and work of your employees.<br>
+                            As our client, you will receive full assistance in the process of legalization of the stay and work of foreigners in Poland and the European Union.<br><br>
+                            We are engaged in:<br>
+                            - processing of work permits for foreigners<br>
+                            - drafting of employment documentation<br>
+                            - A1 certificates for an employee posted to the territory of another EU member state<br><br>
+                            Thanks to our experience and knowledge of regulatory and legal acts, we will help you cope with all the complexities of administrative procedures.
                         </p>
                         <button class="our-services-cards__item-button">
                             More details
@@ -395,18 +373,8 @@
                     <li class="our-services-cards__item">
                         <h4 class="our-services-cards__item-h4">Recruitment</h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Are you looking for legal work abroad? We will help
-                            you with this! Our company provides a comprehensive
-                            recruitment process, taking into account all
-                            aspects, including the legality of employment. We
-                            guarantee not only professional selection of
-                            candidates, but also assistance in adapting to the
-                            new environment. Our goal is to provide you with a
-                            stable and safe job abroad, so that you can realize
-                            your potential and succeed in your career. Don't
-                            lose your opportunity, contact us today and open new
-                            horizons for your professional and personal
-                            development!
+                            Looking for a legal job abroad? We will help you!
+                            Our company provides a comprehensive recruitment process, taking into account all aspects, including employment legality. We guarantee not only the professional selection of candidates for the relevant positions, but also assistance in adapting to a new environment. Our goal is to provide you with stable and secure work abroad so that you can fulfill your potential and succeed in your career. Do not miss the opportunity, contact us today and open new horizons for your professional and personal development!
                         </p>
                         <button class="our-services-cards__item-button">
                             More details
@@ -414,20 +382,10 @@
                     </li>
                     <li class="our-services-cards__item">
                         <h4 class="our-services-cards__item-h4">
-                            Qualified training of specialists for work
+                            Qualified personnel selection
                         </h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Our company has significant experience in personnel
-                            selection in the metalworking industry. We
-                            understand that welding work requires close
-                            attention to detail and a high level of proficiency.
-                            Therefore, our recruiters prefer candidates with
-                            appropriate experience, qualifications and
-                            professional skills in this area. We guarantee that
-                            each employee we recommend has not only the
-                            necessary technical knowledge, but also the ability
-                            to work under high pressure and meet occupational
-                            safety requirements.
+                            Our company has extensive experience in recruiting personnel in the metalworking industry. We understand that welding requires a wide range of skills. Therefore, our recruiters select candidates with relevant experience and qualifications in this field. We guarantee that every employee we recommend to you has not only the necessary technical knowledge, but also the ability to work under high pressure and meet occupational safety requirements.
                         </p>
                         <button class="our-services-cards__item-button">
                             More details
